changing to multipage with about redirect, first steps for blog posts

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <title>Dominic Critchlow</title>
 <link rel="icon" href="images/empty-beaker.svg" type="image/gif" sizes="16x16">
@@ -9,66 +10,45 @@
 <meta property="og:image" content="images/DC_thumb_cas.jpg" />
 <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<div class="sidenav">
-  <img src="images/DC_thumb_cas.jpg" alt="Thumbnail">
-  <h3>Explore:</h3>
-  <a href="https://dcritchlow.pythonanywhere.com"> USA in DATA</a>
-  <a href="https://github.com/DomCritchlow">Github</a>
-  <a href="https://www.linkedin.com/in/dominic-critchlow/">LinkedIn</a>
-  <a href="https://dcritchlow.myportfolio.com/">Portfolio</a>
-  <a href="https://www.instagram.com/domcritchlow/">Instagram</a>
-  <a href="docs/Critchlow_Dominic_DS_Resume_20200320.pdf">Resume</a>
-  <h3>Contact:</h3>
-
-  <div class = contact-mobile>
-    <a href="tel:202-643-3810">Phone</a>
-    <a href="mailto:critchlowd49@gmail.com">Email</a>
-    </div>
-
-  <div class = contact-desktop>
-    <p>Phone:</p>
-    <p>202.643.3810‬</p> 
-    <p>critchlowd49@gmail.com</p>
-  </div>
-
-  <div class="update-date">
-    <h3>Updated:</h3>
-    <p>30 March 2020</p>
-  </div>
-
+  <div class="sidenav">
+    <img src="images/DC_thumb_cas.jpg" alt="Thumbnail">
+    
+      <div class="update-date">
+        <h3>Updated:</h3>
+        <p>30 March 2020</p>
+      </div>
 </div>
 
-  <div class="content">
-    
-    <h1> <a href ="\"> DominicCritchlow.com</a> </h1>
-    <p id="description"> I&rsquo;m <a href="/" rel="author">Dominic Critchlow</a>:
-    data scientist, programmer, student, climber, and coffee drinker.</p>
-    <h3>About Me</h3>
-    <p>
-      I&rsquo;m working as a Data Scientist for the Department of Defense, 
-      developing tools and techniques to enable data driven insights for performance and efficiencies.
-    </p>
-    <p>
-      I studied Physics and Computer Science at Austin Peay State University in Clarksville Tennessee,
-      where I focused my undergraduate research on high altitude balloons. My research later took me to 
-      an internship at NASA's Balloon Research and Development Lab on Wallops Island Virginia. 
-    </p>
 
-    <p>
-      Living in Virginia I spent ~2 years working as Data Science Consultant for Booz Allen Hamilton,
-      where I split my time between Air Force, Navy, and NASA clients. 
-    </p>
+  <div class="header">
+        <h1> <a href ="\"> DominicCritchlow.com</a> </h1>
+        <p id="description"> I&rsquo;m <a href="/about" rel="author">Dominic Critchlow</a>:
+        data scientist, programmer, student, climber, and coffee drinker.</p>
+        <div class="plinks"> 
+            <a href="https://github.com/DomCritchlow">Github</a> •
+            <a href="https://www.linkedin.com/in/dominic-critchlow/">LinkedIn</a> •
+            <a href="https://dcritchlow.myportfolio.com/">Portfolio</a> •
+            <a href="docs/Critchlow_Dominic_DS_Resume_20200320.pdf">Resume</a> •
+            <a href="https://dcritchlow.pythonanywhere.com"> USA in DATA</a>
+        </div>
+    </div>
 
-    <p>
-      I started graduate school in 2018 at Old Dominion University, focusing on Computational and Applied Mathematics. 
-    </p>
+    <div class="content">
+      <div class="item">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur rerum nulla similique necessitatibus voluptas voluptate est nihil enim vero, suscipit provident. Atque deserunt eaque iusto nihil rem consectetur aut praesentium.</p>
+      </div>
 
-    <p>
-      My current technical interests are with web based applications, data visualization, natural language processing,
-      and graph theory. 
-    </p>
-  </div>
+      <div class="item">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam dolorem debitis nostrum exercitationem iure blanditiis minus a, cupiditate dignissimos, corporis animi deserunt adipisci explicabo. Quidem id omnis ab quia praesentium?</p>
+      </div>
+
+
+
+    </div>
+  
+
 </body>
 </html>
