--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     
       <div class="update-date">
         <h3>Updated:</h3>
-        <p>30 March 2020</p>
+        <p>2020-04-08 Wednesday</p>
       </div>
 </div>
 
@@ -37,18 +37,45 @@
     </div>
 
     <div class="content">
-      <div class="item">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur rerum nulla similique necessitatibus voluptas voluptate est nihil enim vero, suscipit provident. Atque deserunt eaque iusto nihil rem consectetur aut praesentium.</p>
-      </div>
+    <article>
+      <hr>
+      <header>
+      <h2>This is a blog posts</h2>
+      <p>
+        2020-04-08 Wednesday
+      </p>
+      </header>
+      <p>
+        This is part of the documentation of learning how to build a webpage. I have set up the general 
+        framework for this webpage. It consists of two html pages <a href="/">this one</a> and an <a href="/about">about page</a>. 
+        I have few items linked in the header that I will eventually move over to this webpage once I learn how to construct the appropriate sections. 
+      </p>
 
-      <div class="item">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam dolorem debitis nostrum exercitationem iure blanditiis minus a, cupiditate dignissimos, corporis animi deserunt adipisci explicabo. Quidem id omnis ab quia praesentium?</p>
-      </div>
+      <img src="images/first_page.png" alt="first page of the webpage">
 
+      <p>I am hosting this page through Google Firebase, and version controlling all this code 
+        on my public <a href="https://github.com/DomCritchlow">github</a>. 
+      </p>
 
+      <p>Short one today but I am going to experiment by making this blog post in an easier format for me to edit.
+        Possibly RSS feed as well. We will see. 
+      </p>
 
-    </div>
-  
+      <p>Pause.</p>
+
+      <p>Little update. Went to publish this first page but you know how things go the first go around.
+        Should have thought about the CSS when I started this. Example:
+      </p>
+
+      <img src="images/blog_post_wrong.png" alt="image of incorrect blog post">
+      
+      <footer>
+        -Dom
+      </footer>
+
+      <hr>
+    </article>
+  </div>
 
 </body>
 </html>
