about me update

--- a/public/about.html
+++ b/public/about.html
@@ -58,12 +58,14 @@
             <p>
             I studied Physics and Computer Science at Austin Peay State University in Clarksville Tennessee,
             where I focused my undergraduate research on high altitude balloons. My research later took me to 
-            an internship at NASA's Balloon Research and Development Lab on Wallops Island Virginia. 
+            an internship at NASA's Balloon Research and Development Lab on Wallops Island Virginia. I focused
+            Linear low-density polyethylene material properties in various conditions during flight.
             </p>
 
             <p>
             Living in Virginia I spent ~2 years working as Data Science Consultant for Booz Allen Hamilton,
-            where I split my time between Air Force, Navy, and NASA clients. 
+            where I split my time between Air Force, Navy, and NASA clients. Developing anything from complex
+            excel functionality to multivariate clustering algorithms for fortran code analysis. 
             </p>
 
             <p>
