email commit checking

--- a/public/about.html
+++ b/public/about.html
@@ -73,7 +73,7 @@
             </p>
 
             <p>
-            My current technical interests are with web based applications, data visualization, natural language processing,
+            My current technical interests are with web-based applications, data visualization, natural language processing,
             and graph theory. 
             </p>
         </div>
