Addition of apple touch icon, for mobile distay

--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,7 @@
 <meta property="og:title" content="Dominic Critchlow" />
 <meta property="og:image" content="images/DC_thumb_cas.jpg" />
 <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 </head>
 
 <body>
