--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <meta property="og:title" content="Dominic Critchlow" />
 <meta property="og:image" content="images/DC_thumb_cas.jpg" />
 <link rel="stylesheet" href="styles.css">
+<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 </head>
 
 <body>
