animation and link color fix

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
 <body>
     
     <div class="header">
+        <div class="icon-container">
+            <div class="beaker"></div>
+            <div class="line"></div>
+        </div>
+        
         <h1> <a href ="\"> DominicCritchlow.com</a> </h1>
         <p id="description"> I&rsquo;m <a href="\" rel="author">Dominic Critchlow</a>:
         data scientist, programmer, student, climber, and coffee drinker.</p>
