no linebreak space addition

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         
         <h1> <a href ="\"> DominicCritchlow.com</a> </h1>
         <p id="description"> I&rsquo;m <a href="\" rel="author">Dominic Critchlow</a>:
-        data scientist, programmer, student, climber, and coffee drinker.</p>
+        data&#160;scientist, programmer, student, climber, and coffee drinker.</p>
         <div class="plinks"> 
             <a href="https://github.com/DomCritchlow">Github</a> •
             <a href="https://www.linkedin.com/in/dominic-critchlow/">LinkedIn</a> •
